--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,42 +1,95 @@
+// mat-sidenav {
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     background-color: #ddd;
+//     height: 100%;
+//     transition: max-width 1s;
+
+//     a {
+//         display: block;
+//         text-decoration: none;
+//         font-size: 20px;
+//         padding: 10px 10px 7px 10px;
+//         color: rgb(43, 43, 43);
+//     }
+
+//     .side-btn:hover {
+//         color: rgb(200, 0, 0);;
+//     }
+
+//     .help-btn {
+//         background-color: red;
+//         color: white;
+//     }
+
+//     .help-btn:hover {
+//         color: rgb(243, 212, 177);
+//     }
+
+//     button {
+//         bottom: 0;
+//         right: 0;
+//         position: absolute;
+//     }
+
+//     .menu-text {
+//         display: inline-flex;
+//         padding-left: 15px;
+//         padding-right: 15px;
+//         overflow-x: hidden;
+//     }
+// }
+
 mat-sidenav {
     position: fixed;
     top: 0;
     left: 0;
     background-color: #ddd;
     height: 100%;
-    transition: max-width 1s;
+    width: 250px;
+    
 
-    a {
-        display: block;
-        text-decoration: none;
-        font-size: 20px;
-        padding: 10px 10px 7px 10px;
-        color: rgb(43, 43, 43);
-    }
-
-    .side-btn:hover {
-        color: rgb(200, 0, 0);;
-    }
-
-    .help-btn {
+    .menu-header {
         background-color: red;
         color: white;
+        //text-align: center;
+        height: 50px;
+        font-size: 22px;
+
+
+        .help-btn {
+            float: left;
+            padding: 10px;
+        }
+
+        a {
+            color: white;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: wheat;
+        }
+
+        button {
+            float: right;
+        }
     }
 
-    .help-btn:hover {
-        color: rgb(243, 212, 177);
-    }
+    .menu-content {
+    
+        a {
+            display: block;
+            color: black;
+            text-decoration: none;
+            height: 40px;
+            padding-top: 10px;
+            padding-left: 10px;
+        }
 
-    button {
-        bottom: 0;
-        right: 0;
-        position: absolute;
-    }
-
-    .menu-text {
-        display: inline-flex;
-        padding-left: 15px;
-        padding-right: 15px;
-        overflow-x: hidden;
+        a:hover {
+            color: red;
+        }
     }
 }
