--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -74,6 +74,9 @@ mat-sidenav {
 
         button {
             float: right;
+            position: fixed;
+            right: 5px;
+            top: 5px;
         }
     }
 
