--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -94,6 +94,10 @@ mat-sidenav {
             height: 40px;
             padding-top: 10px;
             padding-left: 10px;
+
+            i {
+                font-size: 30px;
+            }
         }
 
         a:hover {
