main container left margin responsivnes fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,10 +32,8 @@
             </a>
         </div>
 
-            
-
     </mat-sidenav>
-    <mat-sidenav-content>
+    <mat-sidenav-content [@marginAdjust]="isExpanded">
         <h1>it.capture</h1>
     </mat-sidenav-content>
 </mat-sidenav-container>
