solor adjust, splash is centered

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,10 @@
 
     </mat-sidenav>
     <mat-sidenav-content [@marginAdjust]="isExpanded">
-        <h1>it.capture</h1>
+        <div class="splash">
+            <h1>it.capture</h1>
+        </div>
+        
     </mat-sidenav-content>
 </mat-sidenav-container>
 
