--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -45,10 +45,10 @@ mat-sidenav {
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #ddd;
+    background-color: #eeeeef;
     height: 100%;
     width: 250px;
-    
+    border-right: 1px solid #e5e5e5;
 
     .menu-header {
         background-color: red;
@@ -89,7 +89,7 @@ mat-sidenav {
     
         a {
             display: block;
-            color: black;
+            color: #333;
             text-decoration: none;
             height: 40px;
             padding-top: 10px;
@@ -107,5 +107,15 @@ mat-sidenav {
         span {
             margin-left: 5px;
         }
+    }
+}
+
+mat-sidenav-content {
+    background-color: white;
+
+    .splash {
+        font-size: 30px;
+        text-align: center;
+        padding: 20%;
     }
 }
