--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -112,9 +112,8 @@ mat-sidenav {
 
 mat-sidenav-content {
     background-color: white;
-
-    .splash {
-        text-align: center;
-        padding: 20%;
-    }
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    //overflow: hidden;
 }
